Do not duplicate FD in SmbProviderClient

This change fixes an issue where FileDescriptors were being duplicated,
and as a result leaked, when writing them into a proto to send over
D-Bus

Bug: chromium:881615
Change-Id: I6e7e7abce34a537c3d9228cf9baa6d1d9074625f
Reviewed-on: https://chromium-review.googlesource.com/1211877
Reviewed-by: Zentaro Kavanagh <zentaro@chromium.org>
Commit-Queue: Zentaro Kavanagh <zentaro@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589378}